2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc.h (GC_HIDE_POINTER, GC_REVEAL_POINTER): Define
	unconditionally (do not test GC_I_HIDE_POINTERS); update the
	comment.
	* include/gc.h (HIDE_POINTER, REVEAL_POINTER): Define as alias to
	GC_HIDE/REVEAL_POINTER, respectively.
	* include/private/gc_pmark.h (GC_I_HIDE_POINTERS): Do not define.
	* include/private/gc_priv.h (GC_I_HIDE_POINTERS): Ditto.

2011-05-10  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc.h (GC_register_my_thread): Refine the comment.

2011-05-08  Ivan Maidanski  <ivmai@mail.ru>

	* include/gc_inline.h (GC_MALLOC_WORDS, GC_CONS): Add missing
	parentheses.
	* include/gc_typed.h (GC_get_bit, GC_set_bit,
	GC_CALLOC_EXPLICITLY_TYPED): Ditto.

2011-05-07  Ivan Maidanski  <ivmai@mail.ru>

	* include/private/gcconfig.h (NO_GETCONTEXT): Add missing ')'.

2011-05-07  Ivan Maidanski  <ivmai@mail.ru> (really Thorsten Glaser)

	* include/private/gcconfig.h (NO_GETCONTEXT): Do not use
	getcontext(2) on m68k because it is not implemented there.

2011-05-07  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_clear_a_few_frames): Use BZERO().
	* mark_rts.c (GC_clear_roots, GC_rebuild_root_index): Ditto.
	* reclaim.c (GC_start_reclaim): Ditto.
	* blacklst.c (total_stack_black_listed): Remove "len" local
	variable.
	* dbg_mlc.c (GC_generate_random_valid_address): Replace "for"
	statement with "do-while" one.
	* dyn_load.c (GC_register_dynamic_libraries,
	GC_register_dynlib_callback): Remove redundant parentheses.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* cord/cordxtra.c (CORD_from_file_lazy_inner): Suppress
	"unused result" compiler warning for fread().
	* cord/cordxtra.c: Expand all tabs to spaces.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_write_fault_handler): Break when in_allocd_block
	is set to true.

2011-05-06  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_has_other_debug_info): Change return type to int;
	return -1 if the object has (or had) debugging info but was